# midi-interface

./: .gitmodules  CMakeLists.txt  MIDI-defs.c  README.md  WDC2704M_lib.c  midi_interface-SDK-151.uf2  midi_interface-SDK-200.uf2  midi_interface.c  tusb_config.h  tusb_rules.txt  usbd_descriptors.c
lib/Pico-PIO-USB/src/: pio_usb.c  pio_usb_configuration.h  pio_usb_device.c  pio_usb_host.c  pio_usb_ll.h  usb_definitions.h  usb_rx-test.pio  usb_rx.pio  usb_tx.pio
lib/midi_uart_lib/: midi_uart_lib.c  midi_uart_lib.h
lib/usb_midi_device/: midi_device.c  midi_device.h
lib/usb_midi_host/: CMakeLists.txt  usb_midi_host.c  usb_midi_host.h  usb_midi_host_app_driver.c
